--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@prisma/client": "^3.8.1",
     "@trpc/next": "^10.0.0-alpha.1",
     "@trpc/react": "^10.0.0-alpha.1",
     "@trpc/server": "^10.0.0-alpha.1",
@@ -24,6 +25,7 @@
     "eslint": "8.6.0",
     "eslint-config-next": "12.0.8",
     "postcss": "^8.4.5",
+    "prisma": "^3.8.1",
     "tailwindcss": "^3.0.13",
     "typescript": "4.5.4"
   }
