--- a/package.json
+++ b/package.json
@@ -9,9 +9,9 @@
   },
   "dependencies": {
     "@prisma/client": "^3.8.1",
-    "@trpc/next": "^10.0.0-alpha.1",
-    "@trpc/react": "^10.0.0-alpha.1",
-    "@trpc/server": "^10.0.0-alpha.1",
+    "@trpc/next": "^9.17.0",
+    "@trpc/react": "^9.17.0",
+    "@trpc/server": "^9.17.0",
     "next": "12.0.8",
     "react": "17.0.2",
     "react-dom": "17.0.2",
