--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@auth0/nextjs-auth0": "^1.7.0",
     "@prisma/client": "^3.8.1",
     "@trpc/next": "^9.17.0",
     "@trpc/react": "^9.17.0",
