--- a/package.json
+++ b/package.json
@@ -7,6 +7,9 @@
     "start": "next start",
     "lint": "next lint"
   },
+  "prisma": {
+    "seed": "ts-node prisma/seed.ts"
+  },
   "dependencies": {
     "@prisma/client": "^3.8.1",
     "@trpc/next": "^9.17.0",
@@ -19,7 +22,7 @@
     "zod": "^3.11.6"
   },
   "devDependencies": {
-    "@types/node": "17.0.8",
+    "@types/node": "^17.0.8",
     "@types/react": "17.0.38",
     "autoprefixer": "^10.4.2",
     "eslint": "8.6.0",
@@ -27,6 +30,8 @@
     "postcss": "^8.4.5",
     "prisma": "^3.8.1",
     "tailwindcss": "^3.0.13",
-    "typescript": "4.5.4"
+    "ts-node": "^10.4.0",
+    "tslib": "^2.3.1",
+    "typescript": "^4.5.5"
   }
 }
