--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "seed": "ts-node prisma/seed.ts"
   },
   "dependencies": {
+    "@auth0/nextjs-auth0": "^1.8.0",
     "@prisma/client": "^3.10.0",
     "@trpc/next": "^9.17.0",
     "@trpc/react": "^9.17.0",
