--- a/package.json
+++ b/package.json
@@ -28,6 +28,8 @@
     "eslint": "8.6.0",
     "eslint-config-next": "12.0.8",
     "postcss": "^8.4.5",
+    "prettier": "^2.6.2",
+    "prettier-plugin-tailwindcss": "^0.1.11",
     "prisma": "^3.10.0",
     "tailwindcss": "^3.0.13",
     "ts-node": "^10.4.0",
